@@ -45,13 +45,24 @@
 	NSString		*string_;
 
 	// the first char in the charmap
-	unsigned char		mapStartChar_;
+	NSUInteger		mapStartChar_;
 }
 
 
 /** creates the CCLabelAtlas with a string, a char map file(the atlas), the width and height of each element in points and the starting char of the atlas */
-+(id) labelWithString:(NSString*) string charMapFile: (NSString*) charmapfile itemWidth:(NSUInteger)w itemHeight:(NSUInteger)h startCharMap:(unsigned char)c;
++(id) labelWithString:(NSString*) string charMapFile: (NSString*) charmapfile itemWidth:(NSUInteger)w itemHeight:(NSUInteger)h startCharMap:(NSUInteger)firstElement;
+
+/** creates the CCLabelAtlas with a string and a configuration file
+ @since v2.0
+ */
++(id) labelWithString:(NSString*) string fntFile:(NSString*)fontFile;
 
 /** initializes the CCLabelAtlas with a string, a char map file(the atlas), the width and height in points of each element and the starting char of the atlas */
--(id) initWithString:(NSString*) string charMapFile: (NSString*) charmapfile itemWidth:(NSUInteger)w itemHeight:(NSUInteger)h startCharMap:(unsigned char)c;
+-(id) initWithString:(NSString*) string charMapFile: (NSString*) charmapfile itemWidth:(NSUInteger)w itemHeight:(NSUInteger)h startCharMap:(NSUInteger)firstElement;
+
+/** initializes the CCLabelAtlas with a string and a configuration file
+ @since v2.0
+ */
+-(id) initWithString:(NSString*) string fntFile:(NSString*)fontFile;
+
 @end
