@@ -6,6 +6,7 @@ version 2.0-rc1 XX-Mar-2012
 		NSFileManager and NSBundle are properties (can be changed in runtime)
 		Added "fallback suffix" support (disabled by default).
 		On iPad the default suffix is "-ipad". Before it was ""
+. [NEW] LabelAtlas: added .plist config file support. Easier to migrate games to higher resolutions.
 . [FIX] Deprecated: displayedFrame points to displayFrame avoiding infinite loop (issue #1347)
 . [FIX] LabelBMFont: can be "init" without further arguments
 		Glyphs with big yOffset are rendered correctly (issue #1343)
